--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,12 @@
 body {
     font-family: 'Raleway ', arial;
-    margin-top: 30px;
+   
+}
+
+#blocpage {
     margin-bottom: 30px;
-    margin-left: 40px;
-    margin-right: 50px;
+    margin-left: 10px; 
+    margin-right: 10px;
 }
 
 
@@ -35,6 +38,9 @@ body {
 }
 .blue {
     color: blue;
+    border-top: 2px solid #0065FC;
+    margin-top: -40px;
+    padding-top: 45px;
 }
 
 .black {
@@ -187,15 +193,17 @@ a:hover {
 .heberetaside {
     display: flex;
     flex-direction: row-reverse;    
+    margin-left: 0px;
 }
 
 #hebergements {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 70%;
     margin-bottom: 0px;
-    margin-top: 0px;
-}
+    margin-top: 10px;
+    
+    }
+
 
 h2 {
     font-weight: bold;
@@ -210,6 +218,7 @@ h2 {
     flex-wrap: wrap;
     border-radius: 20px;
 }
+ 
 
 
 .heberg {
@@ -221,7 +230,7 @@ h2 {
     padding: 0;
     margin-top: 30px;
     margin-left: 40px;
-    margin-right: 20px;     
+    margin-right: 20px; 
 }
 
 .heberg img {
@@ -264,18 +273,18 @@ i.far {
 /* ASIDE */
 
 
-aside {
+#popula {
     background-color: #F2F2F2;
-    border-radius: 20px;
-    width: 30%;
-    left: 69%;
-    top: 50%;   
-    margin-left: 20px;
+    border-radius: 20px; 
+    margin-top: 10px;
+    height: 650px;
+    margin-left: 50px;
  } 
  
 
 h3 {
     font-weight: bold;
+    font-size: 20px;
     padding-left: 40px;
     padding-bottom: 0px;
     color: black;
@@ -283,16 +292,17 @@ h3 {
    
    }
 
-aside img {
+#popula img {
     border-radius: 20px 0px 0px 20px;
     padding-left: 5px;
     height: 140px;
     width: 150px;
-
-}
+    }
 .popul2, .popul3 {
     margin-top: 20px;
 }
+
+
 
 .popul, .popul2, .popul3 {
     display: flex;
@@ -300,7 +310,7 @@ aside img {
     background-color: white;
     border-radius: 20px;
     height: 145px;
-    padding-top: 5px;
+    width: 350px;
 }
 
 .fleche {
@@ -335,139 +345,56 @@ aside img {
 
 
 /* SECTION ACTIVITES */
-
-
-#activites {
-    width: 130%;
-    height: 20%;
-    margin-bottom: 5%;
-    margin-top: 50px;
-    }
-
 h5 {
     font-size: 20px;
-    margin-bottom: 10px;
-    }
-
+}
 #acti {
-    display: flex;
-    flex-wrap: nowrap;
-    margin-left: -3%;
-   }
-
-   .to {
-    margin-left: -25px;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-column-gap: 0px;
+    width: 100%;
 }
-
-.to2 {
-    margin-left: -30px;
-}
-
-#legende {
-    color: black;
-    font-weight: bold;
-    font-size: 15px;
+.to, .to2 {
+    display: grid;
+    grid-gap: 10px;
     margin-left: 20px;
-    margin-top: 15px;
-    margin-bottom: 0px;
 }
-
-.port  {
-    margin-top: 10px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px #F2F2F2;
-    background-color: white; 
-    width: 320px;  
-    height: 450px;
+.port, .calanques, .fort, .ile, .notredame, .longchamp {
+    border-radius: 25px;
+    box-shadow: 5px 5px 5px #DEEBFF;
 }
-.port img {
-    width: 320px;
-    height: 410px;
-    border-radius: 20px 20px 0px 0px;
-    margin-left: -8px;
-    margin-top: -10px;
+.port img, .calanques img {
+    height: 390px;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 25px 25px 0 0;
 }
-
-.fort {
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px #F2F2F2;
-    background-color: white;
-    width: 320px;
-    height: 250px;
-    margin-top: 10px;
-    
-}
-
 .fort img {
-    width: 320px;
-    border-radius: 20px 20px 0px 0px;
-    margin-left: -8px;
-    margin-top: -10px;
+    height: 182px;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 25px 25px 0 0;
 }
-
-.ile {
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px #F2F2F2;
-    background-color: white;
-    margin-top: 40px;
-    width: 320px;
-}
-
 .ile img {
-    width: 320px;
-    height: 120px;
-    border-radius: 20px 20px 0px 0px;
-    margin-left: -8px;
-    margin-top: -10px;
+    height: 108px;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 25px 25px 0 0;
 }
-
-.calanques {
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px #F2F2F2;
-    background-color: white;
-    width: 320px;
-    margin-left: 10px;
-    margin-top: 10px;
-    }
-
-.calanques img {
-    width: 320px;
-    height: 410px;
-    border-radius: 20px 20px 0px 0px;
-    margin-left: -8px;
-    margin-top: -10px;
+.notredame img {
+    height: 138px;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 25px 25px 0 0;
 }
-
-.notreDame {
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px #F2F2F2;
-    background-color: white;
-    width: 320px;
-    margin-top: 10px;
-}
-
-.notreDame img {
-    width: 320px;
-    height: 165px;
-    border-radius: 20px 20px 0px 0px;
-    margin-left: -8px;
-    margin-top: -10px;
-}
-
-.longchamp {
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px #F2F2F2;
-    background-color: white;
-    width: 320px;
-    margin-top: 40px;
-}
-
 .longchamp img {
-    width: 320px;
-    height: 165px;
-    border-radius: 20px 20px 0px 0px;
-    margin-left: -8px;
-    margin-top: -10px;
+    height: 152px;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 25px 25px 0 0;
+}
+#legende {
+    padding-top: 10px;
 }
 
 /* FOOTER */
@@ -476,10 +403,6 @@ footer {
     background-color: #F2F2F2;
     display: flex;
     justify-content: flex-start;
-    float: center;
-    position: absolute;
-    width: 120%;
-    margin-left: -50px;
 }
 
 ul {
@@ -504,649 +427,13 @@ h4 {
 
 /* RESPONSIVE */
 
-@media screen and (max-width: 480px) {
-    
-    body {
-        margin: 2px;
-        padding: 2px;
-    }
-    #logo{
-        width: 200px;
-        height: auto;
-        padding-top: 50px;
-        padding-left: 40px;
-        
+@media screen and (max-width: 600px) {
+   #hebergements {
+       background-color: blue;
        }
-    #menus {
-        position: relative;
-        display: flex;
-        justify-content: space-around;
-    }
-    .inscrip {
-        margin-top: 50px;
-        position: absolute;
-        margin-left: -200px;
-    }
-    .blue {
-        margin-top: 200px;
-        margin-left: -700px;
-        border-bottom: 3px solid blue;
-        
-    }
-    .black {
-        margin-right: 40px;
-        margin-top: 200px;
-    }
-    .inscrip, .black, .blue {
-        font-size: 50px;
-    }
-    .presentation { 
-        margin-top: 300px;
-        width: 70%;
-        font-size: 40px;
-        margin-left: 40px;
-    }
-    h1 {
-        font-size: 50px;
-    }
-   .point {
-       width: 150px;
-       height: 110px;
-       font-size: 60px;
-       text-align: center;
-       padding-top: 40px;
-       margin-left: 40px;
-       border-radius: 40px 0px 0px 40px;
-   }
-   
-   #search {
-       width: 650px;
-       height: 150px;
-      
-   }
-   .rech {
-    display: none;
-   }
-   .fas.fa-search {
-    display: block;
-    font-size: 50px;
-   }
-   button {
-      
-       height: 150px;
-       width: 150px;
-       border-radius: 40px;
-       margin-left: -10px;
-   }
-   ::placeholder {
-       font-size: 40px;
-   }
-   .icone {
-       width: 80px;
-       height: 80px;
-       font-size: 60px;
-   }
-   .titres_filtres {
-       font-size: 40px;
-       padding-top: 30px;
-       padding-left: 20px;
-   }
-   .filtre1 {
-       font-size: 50px;
-       margin-left: 40px;
-       padding-bottom: 20px;
-   }
-
-    .eco1 {
-        border: 5px solid;
-     margin-top: 100px;
-     height: 130px;
-     width: 500px;
-     margin-left: -140px;
-     border-radius: 80px;
-     }
-    .eco2 {
-        border: 5px solid;
-        margin-top: 100px;
-        margin-left: 70px;
-        width: 400px;
-        height: 130px;
-        border-radius: 80px;
-    }
-    .eco3 {
-        border: 5px solid;
-        height: 130px;
-        width: 500px;
-        margin-top: 300px;
-        margin-left: -1000px;
-        border-radius: 80px;
-    }
-    .eco4 {
-        border: 5px solid;
-        margin-top: 500px;
-        margin-left: -510px;
-        border-radius: 80px;
-        height: 130px;
-        width: 600px;
-    }
-    .infofiltres {
-        margin-left: 40px;
-        padding-top: 100px;
-    }
-    .in {
-        border: 3px solid;
-        font-size: 40px;
-        width: 40px;
-        height: 40px;
-
-    }
-    .info {
-        font-size: 40px;
-        padding-left: 20px;
-    }
-    aside {
-        margin-top: 1000px;
-        left: 0px;
-        width: 1050px;
-        height: 1500px;
-    }
-    aside img {
-        width: 350px;
-        height: 350px;
-        padding-top: 20px;
-        padding-left: 20px;
-        border-radius: 40px 0px 0px 40px;
-    }
-    h3 {
-        font-size: 50px;
-    }
-    .fleche {
-        font-size: 50px;
-        margin-left: 500px;
-        padding-top: 30px;
-    }
-    .popul, .popul2, .popul3 {
-        height: 400px;
-        border-radius: 40px;
-    }
-    #ho {
-        font-size: 50px;
-        padding-left: 30px;
-    }
-    .nuit {
-        font-size: 40px;
-        padding-left: 40px;
-    }
-    .star2 {
-        font-size: 40px;
-        padding-top: 70px;
-        padding-left: 40px;
-    }
-
-    #hebergements {
-        margin-top: 1600px;
-        background-color: white;
-       width: 900px;
-    }
-    h2 {
-        font-size: 50px;
-    }
-    .heberg {
-        border: 3px solid;
-        box-shadow: 3px black;
-        border-radius: 40px;
-        height: 600px;
-        width: 1200px;
-    }
-    .heberg img {
-        border-radius: 40px 40px 0px 0px;
-       width: 950px;
-       height: 350px;
-       padding-left: 0px;
-       padding-top: 0px;
-       }
-    figcaption {
-        font-size: 40px;
-    }
-    .prix {
-        font-size: 40px;
-        padding-top: 10px;
-    }
-    .star {
-        font-size: 40px;
-    }
-
-    #activites {
-        width: 1000px;
-    }
-    h5 {
-        font-size: 50px;
-    }
-    #activites img {
-        width: 950px;
-        height: 350px;
-    }
-    #acti {
-        flex-direction: column;
-        margin-left: 20px;
-    }
-    .port {
-        margin-top: 40px;
-        width: 950px;
-        height: 450px;
-        margin-left: 20px;
-    }  
-    .calanques {
-        margin-top: 40px;
-        width: 950px;
-        height: 450px;
-        margin-left: 20px;
-    }
-   .fort, .ile, .notreDame, .longchamp {
-        width: 950px;
-        height: 450px;
-        margin-left: 50px;
-        margin-top: 40px;
-    }
-    #legende {
-        font-size: 40px;
-    }
-    
-    
-    footer {
-        width: 1100px;
-        height: 1000px;
-    }
-    .bloc1 {
-       
-        margin-left: 20px;
-        font-size: 40px;
-    }
-    .bloc2 {
-        margin-top: 350px;
-        position: absolute;
-        margin-left: 20px;
-        font-size: 40px;
-    }
-    .bloc3 {
-        margin-top: 650px;
-        position: absolute;
-        margin-left: 20px;
-        font-size: 40px;
-    }
-   
- }
- 
-
-@media screen and (min-width: 481px) and (max-width: 800px) {
-
-    body {
-        margin: 2px;
-        padding: 2px;
-        font-family: 'Raleway ', arial;
-    }
-    header {
-        width: auto;
-    }
-    #logo{
-        width: 100px;
-        height: auto;
-        padding-top: 30px;
-        padding-left: 40px;
-        
-       }
-    #menus {
-        position: relative;
-        display: flex;
-        justify-content: space-around;
-    }
-    .inscrip {
-       float: right;
-       margin-top: -80px;
-       margin-left: 0px;
-       position: absolute;
-    }
-    .blue {
-        margin-top: 20px;
-        margin-left: 200px;
-        border-bottom: 3px solid blue;
-        
-    }
-    .black {
-        margin-left: 100px;
-        margin-top: 20px;
-        padding-left: 20px;
-    }
-    .inscrip, .black, .blue {
-        font-size: 20px;
-    }
-    .presentation { 
-        margin-top: 10px;
-        width: 70%;
-        font-size: 15px;
-        margin-left: 20px;
-        margin-bottom: 40px;
-    }
-    h1 {
-        font-size: 25px;
-    }
-   
-   .point {
-       width: 100px;
-       height: 40px;
-       font-size: 25px;
-       text-align: center;
-       padding-top: 10px;
-       margin-left: 40px;
-       border-radius: 40px 0px 0px 40px;
-   }
-   
-   #search {
-       width: 650px;
-       height: 50px;
-      
-   }
-   .rech {
-    display: none;
-   }
-   .fas.fa-search {
-    display: block;
-    font-size: 20px;
-    padding-bottom: 30px;
-   }
-   button {
-      
-       height: 50px;
-       width: 150px;
-       border-radius: 40px;
-       margin-left: -10px;
-   }
-   ::placeholder {
-       font-size: 20px;
-   }
-   .icone {
-       width: 30px;
-       height: 30px;
-       font-size: 20px;
-       margin-top: -5px;
-   }
-   .titres_filtres {
-       font-size: 15px;
-       padding-top: 5px;
-       padding-left: 20px;
-   }
-   .filtre1 {
-       font-size: 20px;
-       margin-left: 20px;
-       padding-bottom: 20px;
-       margin-top: 0px;
-   }
-
-    .eco1 {
-        border: 5px solid;
-     margin-top: 50px;
-     height: 40px;
-     width: 200px;
-     margin-left: -70px;
-     border-radius: 80px;
-     }
-    .eco2 {
-        border: 5px solid;
-        margin-top: 50px;
-        margin-left: 20px;
-        width: 200px;
-        height: 40px;
-        border-radius: 80px;
-    }
-    .eco3 {
-        border: 5px solid;
-        height: 40px;
-        width: 200px;
-        margin-top: 110px;
-        margin-left: -440px;
-        border-radius: 80px;
-    }
-    .eco4 {
-        border: 5px solid;
-        margin-top: 170px;
-        margin-left: -210px;
-        border-radius: 80px;
-        height: 40px;
-        width: 250px;
-    }
-    .infofiltres {
-        margin-left: 20px;
-        padding-top: 20px;
-    }
-    .in {
-        border: 3px solid;
-        font-size: 15px;
-        width: 15px;
-        height: 15px;
-
-    }
-    .info {
-        font-size: 20px;
-        padding-left: 20px;
-    }
-    aside {
-        margin-top: 30px;
-        width: 500px;
-        height: 800px;
-        margin-left: -10px;
-    }
-    aside img {
-        width: 200px;
-        height: 180px;
-        padding-top: 10px;
-        padding-left: 10px;
-        border-radius: 40px 0px 0px 40px;
-    }
-    h3 {
-        font-size: 20px;
-    }
-    .fleche {
-        font-size: 20px;
-        margin-left: 500px;
-    }
-    .popul, .popul2, .popul3 {
-        height: 200px;
-        border-radius: 40px;
-    }
-    #ho {
-        font-size: 20px;
-        padding-left: 10px;
-    }
-    .nuit {
-        font-size: 15px;
-        padding-left: 20px;
-    }
-    .star2 {
-        font-size: 15px;
-        padding-top: 60px;
-        padding-left: 20px;
-    }
-    .heberetaside {
-        display: inline-block;
-    }
-    #hebergements {
-        background-color: white;
-       width: 400px;
-       right: 100px;
-    }
-    h2 {
-        font-size: 20px;
-    }
-    .heberg {
-        
-        border-radius: 40px;
-        height: 270px;
-        width: 500px;
-        left: 100px;
-    }
-    .heberg img {
-        border-radius: 40px 40px 0px 0px;
-       width: 410px;
-       height: 170px;
-       padding-left: 0px;
-       padding-top: 0px;
-       }
-    figcaption {
-        font-size: 20px;
-    }
-    .prix {
-        font-size: 15px;
-        padding-top: 10px;
-    }
-    .star {
-        font-size: 15px;
-    }
-
-    #activites {
-        width: 500px;
-    }
-    h5 {
-        font-size: 20px;
-        margin-left: 20px;
-    }
-    #activites img {
-        width: 410px;
-        height: 170px;
-    }
-    #acti {
-        flex-direction: column;
-        margin-left: 20px;
-    }
-    .port {
-        margin-top: 40px;
-        width: 410px;
-        height: 250px;
-        margin-left: 20px;
-    }  
-    .calanques {
-        margin-top: 40px;
-        width: 410px;
-        height: 250px;
-        margin-left: 20px;
-    }
-   .fort, .ile, .notreDame, .longchamp {
-        width: 410px;
-        height: 250px;
-        margin-left: 50px;
-        margin-top: 40px;
-    }
-    #legende {
-        font-size: 20px;
-    }
-    
-    
-    footer {
-        width: 150%;
-        height: 600px;
-    }
-    .bloc1 {
-       
-        margin-left: 20px;
-        font-size: 20px;
-    }
-    .bloc2 {
-        margin-top: 200px;
-        position: absolute;
-        margin-left: 20px;
-        font-size: 20px;
-    }
-    .bloc3 {
-        margin-top: 400px;
-        position: absolute;
-        margin-left: 20px;
-        font-size: 20px;
-    }
 }
-
-@media screen and (min-width: 801px) and (max-width: 1500px) {
-    #logo {
-        margin-left: -10px;
-    }
-    #menus {
-      
-        display: flex;
-        justify-content: flex-end;
-         }
-    .blue {
-        margin-left: -50px;
-    }
-    .eco1 {
-        width: 150px;
-    }
-    .eco2 {
-        width: 150px;
-    }
-    .eco3 {
-        margin-top: 50px;
-        width: 150px;
-        margin-left: -400px;
-    }
-    .eco4 {
-        margin-top: 50px;
-    }
-    .heberetaside {
-        display: inline-block;
-        margin: 0;
-    }
-    aside {
-        display: flex;
-        width: 750px;
-        height: 500px;
-        margin-left: 0px;
-    }
-    h3 {
-        width: 100%;
-        font-size: 20px;
-    }
-    .fleche {
-        margin-left: 300px;
-    }
-    .popul {
-        margin-top: 100px;
-        margin-left: -350px;
-    }
-    .popul2 {
-        margin-top: 100px;
-        margin-left: 0px;
-        width: 350px;
-    }
-    .popul3 {
-        margin-top: 300px;
-        margin-left: -550px;
-    }
-    #hebergements {
-        width: 750px;
-           
-    }
-    .to {
-        padding-left: 50px;
-    }
-    .calanques {
-            margin-top: 500px;
-            margin-left: -790px;
-        }
     
-    .to2 {
-            margin-top: 500px;
-            padding-left: 60px;
-        }
-    footer {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    .bloc2, .bloc3 {
-        margin-left: 0px;
-    }
 
-   
-    
-}
 
 
 
